[gd_scene load_steps=5 format=3 uid="uid://d1t0aj4od4oin"]

[ext_resource type="Script" path="res://login.register.gd" id="1_mhn1f"]

[sub_resource type="LabelSettings" id="LabelSettings_sqqct"]
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x5gar"]
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yejne"]
font_color = Color(1, 0, 0, 1)

[node name="Control" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mhn1f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -60.0
offset_right = 33.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Логин"

[node name="Label4" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
label_settings = SubResource("LabelSettings_sqqct")

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Почта"

[node name="Label5" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
label_settings = SubResource("LabelSettings_x5gar")

[node name="LineEdit3" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Пароль"

[node name="Label6" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
label_settings = SubResource("LabelSettings_yejne")

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Войти"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Регистрация"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
